ArcadeLauncher/ArcadeLauncher/wwwroot/css/site.css
html {
    font-size: 14px;
    cursor: none;
}

body::-webkit-scrollbar {
    display: none;

}

@font-face {
    font-family: asusROG;
    src: url(/Fonts/7032-fontps.ttf);
}

.font-text{
    font-family: asusROG;
}

.big-text{
    font-size: 30px;
}
.mid-text{
    font-size: 18px;
}

#playericons {
    position: absolute;
    bottom: 0;
    left: 0;
    padding-left: 180px;
    padding-bottom: 180px;
    width: 300px !important;
    height: 100px !important;
    display: inline-block;
}

    #playericons > div {
        background-image: url(/css/images/player_png.png);
        height: 40px;
        width: 40px;
        background-size: contain;
        background-repeat: no-repeat;
        float: left;
    }

        #playericons > div:nth-child(3) {
            margin-left: -30px;
        }

#author-names {
    position: fixed;
    bottom: 0;
    right: 0;
    margin-right: 60px;
    padding-bottom: 130px;
    width: 350px !important;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap-reverse;
    justify-content: flex-start;
    align-content: end;
}

    #author-names > div {  
        width: 300px;
        float: left;
    }

.inner{
    position:relative;
}
.outer{
    position: absolute;
}

@media (min-width: 768px) {
  html {
    font-size: 16px;
  }
}

html {
  position: relative;
  min-height: 100%;
}

.cat-text {
    color: white !important;
    text-align: left !important;
    font-size: 80px;
}

#cat-new-text {
    padding-left: 160px;
    padding-top: 55px
}
#cat-pop-text {
    padding-left: 160px;
    padding-top: 295px
}

#backgroundimage {
    background: url("images/main_menu_bg.png");
    background-size: cover;
    background-repeat:no-repeat;
    height: 2200px;
    width: 100vw;
}

.info-padding{
    padding: 2em;
    padding-top: 10em;
    text-align: center;
    letter-spacing: 3px;
}

.smaller-text-space{
    width: 45vh;
    position: absolute;
    right: 150px;
}

.hidden{
    display: none !important;
}

.reveal{
    position: relative;
    transform: translateY(1100px);
    opacity: 1;
}

.play-border {
    all: unset;
    margin: 10px;
    background-size: contain;
    background-repeat: no-repeat;
    height: 22vh;
    width: 16vh;
    display: inline-block;
    opacity: 1;
    background-image: url(/css/images/game_display_1.png);
}

.play-btn {
    all: unset;
    margin: 10px;
    background-size: contain;
    background-repeat: no-repeat;
    height: 22vh;
    width: 16vh;
    display: inline-block;
    opacity: 1;
/*    box-shadow: 0 0 10px 5px #8E8E8E;*/

}
    .play-btn > div > div{
        height: 188px;
        width: 134px;
        background-size: cover;
        margin-left: 29px;
        margin-top: 28px;
    }
    .play-btn:focus .play-border {
        margin: 10px;
        background-size: contain;
        background-repeat: no-repeat;
        height: 22vh;
        width: 16vh;
        display: inline-block;
        opacity: 1;
        background-image: url(/css/images/game_display_1_select.png);
    }

.games-new{
    position: absolute;
    left:1em;
    padding-top: 16px;
}



.button-center {
    position: relative;
    top: 50px

}

.info-board {
    background-color: #967bb67d !important;
    box-shadow: 0 0 10px 10px #967bb67d;
    margin: 2em;
    background-size: cover;
    border-radius: 40px;
    position: absolute;
    right:0;
    top:0;
    height: calc(100% - 4em);
    width: 35em;
}

#StartText {
    position: fixed;
    width: 100vw;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

#start-button
{
    position: absolute;
    background-image: url(/css/images/start_button.png);
    background-size: 100%;
    background-repeat: no-repeat;
    height: 600px;
    width: 600px;
    transform: translateY(200px);

}


.img-info-board {
    position: absolute;
    right: 0;
    top: 0;
    background-image: url(/css/images/info_display.png);
    background-size: 100%;
    background-repeat: no-repeat;
    height: 100vh;
    width: 73vh;
}

.img-section {
    background-image: url(/css/images/scroll_menu_2.png);
    background-size: 100%;
    background-repeat: no-repeat;
    height: 40vh;
    width: 111vh;
    position: absolute;
    left: 0;
    top: 1em;
}

.img-section-2 {
    background-image: url(/css/images/scroll_menu_2.png);
    background-size: 100%;
    background-repeat: no-repeat;
    height: 40vh;
    width: 111vh;
    position: absolute;
    left: 0;
    top: 26em;
}

.menu-color {
    filter: brightness(0) saturate(100%) invert(83%) sepia(23%) saturate(777%) hue-rotate(39deg) brightness(105%) contrast(111%);
}

